<resources>
    <string name="app_name">Welny</string>
    <string name="no_network">Пожалуйста, проверьте ваше сетевое соединение</string>
    <string name="mobile">Мобильный</string>
    <string name="code">Код</string>
    <string name="name">Имя</string>
    <string name="sr_name">Фамилия</string>
    <string name="email">e-mail"</string>
    <string name="input_code">Введите проверочный код</string>
    <string name="registration_info">Мы отправляем информацию о заказе на ваш e-mail</string>
    <string name="registration_info_header">Пожалуйста, введите ваши данные:</string>
    <string name="registration_complete">Завершить регистрацию</string>
    <string name="get_code">Получить код</string>
    <string name="get_code_again">Получить код снова</string>
    <string name="get_code_descr">Введите номер телефона, чтобы войти или зарегистрироваться</string>
    <string name="get_code_failed">Неизвестная ошибка</string>
    <string name="verify_code_failed">Неизвестная ошибка</string>
    <string name="log_out_failed">Log out failed</string>
    <string name="update_account_failed">Update account failed</string>
    <string name="verify_code">Проверить код</string>
    <string name="should_start_with_seven_nine">Номер телефона должен начинаться с +79</string>
    <string name="should_contain_number">Номер телефона должен начинаться с +79 и состоять из цифр.</string>
    <string name="intro1_header1">Рады видеть вас в</string>
    <string name="intro1_header2">№1* приложение в России для заказа массажа в AppStore</string>
    <string name="intro1_header3">*В категории «Здоровье и фитнес» согласно App Annie</string>
    <string name="intro2_header1">Оформить заказ просто</string>
    <string name="intro2_header2">Зарегистрируйтесь</string>
    <string name="intro2_header3">Выберите вид массаж и пол специалиста</string>
    <string name="intro2_header4">Укажите время и дату сеанса</string>
    <string name="intro2_header5">Добавьте адрес и платежную карту</string>
    <string name="intro2_header6">Заказывайте первоклассный массаж по доступным ценам в несколько кликов, когда и куда вам удобно.</string>
    <string name="intro3_header1">Опытные специалисты</string>
    <string name="intro3_header2">Только лучшие массажисты с сертификатами, прошедшие строгий отбор, прежде чем стать партнерами Welny.</string>
    <string name="intro3_header3">Не беспокойтесь ни о чем - мастера привезут профессиональный массажный стол, масло и простыни.</string>
    <string name="intro4_header1">Безопасная оплата</string>
    <string name="intro4_header2">Оплата заказа происходит только после завершения вашего сеанса. Платеж полностью защищен и производится с помощью 128-bit SSL-шифрования.</string>
    <string name="intro5_header1">Гарантия качества</string>
    <string name="intro5_header2">Мы уверены в качестве услуг исполнителей и компенсируем вам стоимость заказа, если результат Вас не устроит.</string>
    <string name="intro5_header3">Зарегистрируйтесь и воспользуйтесь скидкой на ваш первый массаж с Welny!</string>
    <string name="try_welny_header">Попробуйте Welny+!</string>
    <string name="try_welny_header1">Польза массажа зависит от его регулярности. Заботьтесь о себе чаще с подпиской Welny+, дающей доступ к скидкам до 20% на каждый час массажа.</string>
    <string name="try_welny_header2">С ценой Welny+ от 999 рублей – попробовать ничего не стоит. Вы сразу же получаете скидку на ваш заказ.</string>
    <string name="try_welny_header3">Только вы решаете, когда и на какой срок вам оформить подписку. Подписка не продляется автоматически. Средства за подписку не возвращаются.</string>
    <string name="try_welny_header4">Все данные о вашей подписке доступны в меню</string>
    <string name="try_welny_header5">Оформите подписку</string>
    <string name="try_welny_header6">во время вашего заказа!</string>
    <string name="invite_friend">Пригласить</string>
    <string name="invite_friend_header">Пригласить друзей</string>
    <string name="invite_friend_header1">Скидка на массаж</string>
    <string name="invite_friend_header2">Поделитесь промокодом с друзьями и каждый получит скидку 300 рублей на их первый заказ!</string>
    <string name="order_welny_header1">Спасибо, что пользуетесь</string>
    <string name="order_welny_header2">Подписка</string>
    <string name="order_welny_header3">Дата начала</string>
    <string name="order_welny_header4">Срок окончания</string>
    <string name="order_welny_header5">Часы массажа со скидкой</string>
    <string name="order">Заказать</string>
    <string name="update_account_header">Аккаунт</string>
    <string name="update_account">Обновить</string>
    <string name="register">Регистрация</string>
    <string name="about_welny_header">Welny</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welny_plus">Welny+</string>
    <string name="invite_friends">Пригласить друзей</string>
    <string name="orders">Заказы</string>
    <string name="account">Аккаунт</string>
    <string name="support">Поддержка</string>
    <string name="log_out">Выйти</string>
    <string name="call_to_operator">Позвонить оператору</string>
    <string name="about_welny">О Welny</string>
    <string name="zone_close">Зона покрытия</string>
    <string name="zone_close_text">"На текущий момент сервис предоставляется в г. Москва в пределах МКАД."</string>
    <string name="agreement">Соглашение</string>
    <string name="confidential">Конфиденциальность</string>
    <string name="faq">FAQ</string>
    <string name="version">Version</string>
    <string name="share_promo_code">Поделиться ссылкой!</string>
    <string name="credits">Кредиты:</string>
    <string name="promo_code">Промо-код:</string>
    <string name="incorrect_email_format">Неверный формат e-mail</string>
    <string name="code_sent">Код отправлен</string>
    <string name="request_code_error_message">Отправить код повторно можно не менее чем через 60 секунд после предыдущей отправки</string>
    <string name="message_type_header1">Закажи массаж</string>
    <string name="message_type_header2">Для одного человека</string>
    <string name="message_type_header3">Массаж для</string>
    <string name="message_type_header4">двоих</string>
    <string name="message_type_header5">Для двоих человек с двумя специалистами</string>
    <string name="message_type_header6">Пригласи друга</string>
    <string name="message_type_header7">И получи скидку</string>
    <string name="message_type_header8">Поделись промо-кодом с друзьями</string>
    <string name="user_agreement">пользовательского соглашения</string>
    <string name="user_confidential">политики конфиденциальности</string>
    <string name="promo_code_share">Ваш промо-код скопирован в буфер обмена</string>
    <string name="promo_code_invite_friend">удобное приложение для заказа качественного массажа на дом по доступным ценам. Промокод на скидку 300 рублей на первый заказ:</string>
    <string name="facebook_app_id">974232456383596</string>
    <string name="fb_login_protocol_scheme">fb974232456383596</string>

</resources>
