<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorLightAboutBackground">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/tv_call_to_operator"
            android:textSize="20sp"
            android:paddingStart="40dp"
            android:paddingLeft="40dp"
            android:paddingEnd="40dp"
            android:paddingRight="40dp"
            android:paddingTop="112dp"
            android:paddingBottom="11dp"
            android:textColor="@android:color/white"
            android:text="@string/call_to_operator" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_call_to_operator"
            android:gravity="center"
            android:id="@+id/tv_zone_close"
            android:textSize="20sp"
            android:paddingStart="40dp"
            android:paddingLeft="40dp"
            android:paddingEnd="40dp"
            android:paddingRight="40dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="@android:color/white"
            android:text="@string/zone_close" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_zone_close"
            android:gravity="center"
            android:id="@+id/tv_about_welny"
            android:textSize="20sp"
            android:paddingStart="40dp"
            android:paddingLeft="40dp"
            android:paddingEnd="40dp"
            android:paddingRight="40dp"
            android:layout_marginTop="52dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="@android:color/white"
            android:text="@string/about_welny" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_about_welny"
            android:gravity="center"
            android:id="@+id/tv_agreement"
            android:textSize="20sp"
            android:paddingStart="40dp"
            android:paddingLeft="40dp"
            android:paddingEnd="40dp"
            android:paddingRight="40dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="@android:color/white"
            android:text="@string/agreement" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_agreement"
            android:gravity="center"
            android:id="@+id/tv_confidential"
            android:textSize="20sp"
            android:paddingStart="40dp"
            android:paddingLeft="40dp"
            android:paddingEnd="40dp"
            android:paddingRight="40dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="@android:color/white"
            android:text="@string/confidential" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_confidential"
            android:gravity="center"
            android:id="@+id/tv_faq"
            android:textSize="20sp"
            android:paddingStart="40dp"
            android:paddingLeft="40dp"
            android:paddingEnd="40dp"
            android:paddingRight="40dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="@android:color/white"
            android:text="@string/faq" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_version"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:textSize="20sp"
            android:paddingStart="40dp"
            android:paddingLeft="40dp"
            android:paddingEnd="40dp"
            android:paddingRight="40dp"
            android:textColor="@color/colorTextVersion"
            tools:text="1.1" />

    </RelativeLayout>

</ScrollView>