<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/top_banner_3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_header1"
            android:layout_below="@+id/iv_banner"
            android:layout_marginTop="12dp"
            android:textSize="18sp"
            android:lineSpacingExtra="6sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/intro3_header1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_header2"
            android:layout_below="@+id/tv_header1"
            android:layout_marginTop="15dp"
            android:textSize="14sp"
            android:lineSpacingExtra="4sp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/intro3_header2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_header3"
            android:textSize="14sp"
            android:textColor="@color/colorDarkGray"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:lineSpacingExtra="4sp"
            android:layout_below="@+id/tv_header2"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginTop="32dp"
            android:text="@string/intro3_header3"/>

    </RelativeLayout>
</ScrollView>