<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/top_banner_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_header1"
            android:layout_below="@+id/iv_banner"
            android:layout_marginTop="10dp"
            android:textSize="24sp"
            android:textColor="@color/colorEnableColor"
            android:layout_centerInParent="true"
            android:text="@string/intro1_header1" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="66dp"
            android:layout_height="48dp"
            android:layout_marginTop="19dp"
            android:layout_centerInParent="true"
            android:layout_below="@+id/tv_header1"
            android:src="@drawable/ic_logo_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_header2"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:lineSpacingExtra="6sp"
            android:layout_below="@+id/iv_logo"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginTop="32dp"
            android:text="@string/intro1_header2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_header3"
            android:textSize="14sp"
            android:textColor="@color/colorDarkGray"
            android:layout_below="@+id/tv_header2"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:lineSpacingExtra="4sp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginTop="16dp"
            android:text="@string/intro1_header3"/>

    </RelativeLayout>
</ScrollView>